--- a/数据结构/排序.md
+++ b/数据结构/排序.md
@@ -1,73 +1,441 @@
 ## 引言
 
-**数组排序的方法**：
-1. 冒泡排序
-2. 选择排序
-3. 插入排序
-4. 归并排序
-5. 快速排序
-6. 计数排序
-7. 桶排序
-8. 基数排序
+很羞耻地说我跪在某大厂的两个排序算法，**快速排序**和**归并排序**。各种原因，一方面是看了一些社招一面是直接上来算法题，因此，自己也准备了算法（从简单到困难，刷了 30 几道题），对于算法题还是有点信心的，不过事实是**我翻车了**。另一方面，认为这种考烂的算法题不会出，虽然也看过归并排序，但是能马上说出的只有选择、冒泡、快速（递归版）。所以，很遗憾地没有命中面试官的问题。
 
-比较常见的还是冒泡排序、选择排序、快速排序，所以这次只总结这三种排序方法的原理和使用。
 
-### 冒泡排序
-在排序算法中，最简单就是冒泡排序，但是其性能也是最差的（时间复杂度O(n^2)）。其实现原理是**比较数组中所有相邻的两项**，如果前一项大于后一项，则交换两者位置，只到比较完最后两项为之，而它也由于一直向上移动元素，则被称为冒泡。
+![](https://user-gold-cdn.xitu.io/2020/3/26/17112adbd587eccf?w=224&h=210&f=jpeg&s=11410)
+
+> 不过没事，编程的本质就是**遇到问题解决问题**的过程，也是**不断反思自己的不足**的过程。笔者一直坚信的就是——**唯有在失败中才能不断成长**。
+
+回到正题，常见的排序算法有 10 种，分别是：
+- 冒泡排序
+- 选择排序
+- 插入排序
+- 希尔排序
+- 归并排序
+- 快速排序
+- 堆排序
+- 计数排序
+- 桶排序
+- 基数排序
+
+接下来，我们就分别来了解一下它们的原理和实现。
+
+## 一、冒泡排序
+
+原理：冒泡排序原理是**比较数组中所有相邻的两**项，如果前一项大于后一项，则交换两者位置，只到比较完最后两项为之，而它也由于一直向上移动元素，则被称为冒泡。
+
+>在排序算法中，最简单就是冒泡排序，但是其性能也是最差的，时间复杂度`O(n^2)`
+
+代码实现：
 ```javascript
 function bubbleSort(arr) {
-	if (arr.length <= 1) return arr
-	
-	var temp 
-	for (var i = 0; i < arr.length; i++) {
-		if (arr[i] > arr[i+1]) {
-			temp = arr[i+1]
-			arr[i+1] = arr[i]
-			arr[i] = temp
-		}
-	}
-	return arr
+    if (arr.length <= 1) return arr
+    
+    let temp 
+    for (let i = 0; i < arr.length; i++) {
+        for (let j = 0; j < arr.length - 1; j++) {
+            if (arr[j] > arr[j+1]) {
+                temp = arr[j+1]
+                arr[j+1] = arr[j]
+                arr[j] = temp
+            }
+        }
+    }	
+    return arr
 }
 ```
 
-### 选择排序
-选择排序顾名思义，就是选出数组中的最小项拍到第一位，然后继续找剩余数组项中的最小项，排到第二项，以此类推。
+## 二、选择排序
+
+原理：选择排序顾名思义，就是选出数组中的最小项排到第一位，然后继续找剩余数组项中的最小项，排到第二项，以此类推（迭代或者递归都可以）
+
+>选择排序的性能也不咋样，时间复杂度为 `O(n^2)`
+
+代码实现：
 ```javascript
 function selectionSort(arr) {
-	if (arr.length <= 1) return arr
-	
-	var minIndex = 0, temp
-	for (var i = 0; i < arr.length - 1; i++) {
-		for (var j = i; j < arr.length; j++) {
-			if (arr[minIndex] > arr[j+1]) {
-				minIndex = j + 1
-			}
-		}
-		temp = arr[i]
-		arr[i] = arr[minIndex]
-		arr[minIndex] = temp
-	}
-	return arr
+    if (arr.length <= 1) return arr
+
+    let minIndex = 0, temp
+    for (let i = 0; i < arr.length - 1; i++) {
+        for (let j = i; j < arr.length; j++) {
+            if (arr[minIndex] > arr[j+1]) {
+                minIndex = j + 1
+            }
+        }
+        temp = arr[i]
+        arr[i] = arr[minIndex]
+        arr[minIndex] = temp
+    }
+    return arr
 }
 ```
 
-### 快速排序
-相比较前两种排序算法，快速排序则显得比较高级一点点。它的原理是先在数组中选取一个基准（benchmark），然后将小于基准的放到数组的左边，大于等于基准的放到数组的右边，不断递归左右两边的数组，并将它们和基准相连接构成一个新的数组。
+## 三、插入排序
+
+原理：插入排序首先会判断数组中第一个元素是否大于第二个元素，是则交换位置，然后转为前三个元素，进行判断前一个元素是否大于后一个元素，不断迭代至整个数组，得到最终排序的完整数组。
+
+>插入排序的时间复杂度为 `O(n^2)`
+
+代码实现：
+```javascript
+function insertionSort(arr) {
+    const { len } = arr
+    let preIndex, current
+    
+    for (let i = 1; i < len; i++) {
+        preIndex = i - 1
+        current = arr[i]
+    
+        while(preIndex >= 0 && arr[preIndex] > current) {
+    	    arr[preIndex+1] = arr[preIndex]
+    	    preIndex--
+        }
+        arr[preIndex+1] = current
+    }
+    return arr
+}
+```
+
+## 四、希尔排序
+
+原理：先将整个待排序的记录序列分割成若干子序列分别进行直接插入排序，待整个序列中的记录**基本有序**时，再对全体记录进行依次直接插入排序。
+
+> 希尔排序的时间复杂度，平均为 `O(nlog2n)`，最坏为 `O(n^2)`
+
+代码实现：
+```javascript
+function shellSort(arr) {
+    const { len } = arr
+    let temp, gap = 1
+
+    // 动态定义区间序列
+    while (gap < len/3) {
+        gap = gap*3 + 1
+    }
+    for (gap; gap > 0; gap = Math.floor(gap/3)) {
+        for (let i = gap; i < len; i++) {
+            temp = arr[i]
+            for (let j = i-gap; j >= 0 && arr[j] >temp; j-=gap) {
+               arr[j+gap] = arr[j]
+            }
+            arr[j+gap] = temp
+        }
+    }
+    return arr
+}
+```
+
+## 五、归并排序
+
+原理：归并排序是一种**分治**的算法，首先会将原始数组分割成一个个小数组，直到每个小数组只剩下一个原始。然后将这些小数组**归并**成一个个较大的数组，直到得到排序完的完整的数组。
+
+>归并排序的时间复杂度为 `O(nlogn)`
+
+代码实现：
+
+```javascript
+// 递归切割数组
+function mergeSort(arr) {
+    if (arr.length > 1) {
+        // 选取中间索引作为基准分割数组
+        const middle = Math.floor(arr.length / 2)
+        // 递归切割数组
+        const left = mergeSort(arr.slice(0, middle))
+        const right = mergeSort(arr.slice(middle, arr.length))
+        // merge() 用于归并数组
+        arr = merge(left, right)
+    }
+    return arr
+}
+// 归并数组
+function merge(left, right) {
+    let i = 0, j = 0
+    const result = []
+    
+    while(i < left.length && j < right.length) {
+        result.push(
+            left[i] < right[i] ? left[i++] : right[j++]
+        )
+    }
+    return result.concat(i < left.length ? left.slice(i) : right.slice(j))
+}
+```
+
+> 归并排序整体的逻辑还是简单的，首先递归切割，然后归并。
+
+## 六、快速排序
+
+原理：快速排序也是基于**分治**的思想，首先它会选择一个基准，定义两个指针分别指向数组的头尾，移动左指针，如果左指针对应的值比基准大的元素，则移动右指针找到比基准小的元素，交换左右指针元素，反复指针，直至左指针大于右指针，结束本次移动。然后分别递归基准左右两边的子数组重复进行上述步骤，直至得到已排序的完整数组，它的时间复杂度为 `O(nlogn)`。
+
+> 快速排序的时间复杂度最优为`O(nlogn)`，最坏的话`O(n^2)`，并且由于`O(nlogn)`记号中隐含的常数因子很小，所以等于`O(nlogn)`好很多。
+
+代码实现：
 
 ```javascript
 function quickSort(arr) {
-	if (arr.length <= 1) return arr
+    return quick(arr, 0, arr.length-1)
+}
 
-	var benchMark = arr.splice(0, 1)[0]
-	var left = []
-	var right = []
-	for (var i = 0; i < arr.length; i++) {
-		if (arr[i] < benchMark[i]) {
-			right.push(arr[i])
-		} else {
-			left.push(arr[i])
-		}
-	}
-	return quickSort(left).concat(right, quickSort(right))
+// 递归数组
+function quick(arr, left, right) {
+    let index
+    if (arr.length > 1) {
+        index = partition(arr, left, right)
+        
+        if (left < index-1) {
+            quick(arr, left, index-1)
+        }
+        
+        if (index < right) {
+            quick(arr, index, right)
+        }
+    }
+    return arr
+}
+
+// 对数组进行大小位置交换
+function partition(arr, left, right) {
+    const benchMark = arr[Math.floor(arr.length/2)]
+    
+    let i = left, j = right
+    while(i <= j) {
+        while(arr[i] < benchMark) {
+            i++
+        }
+        
+        while(arr[j] > benchMark) {
+            j++
+        }
+        
+        if (i <= j) {
+            let temp = arr[i]
+            arr[i] = arr[j]
+            arr[j] = temp
+        }
+    }
+    
+    return i
 }
 ```
+> 同样是分治思想，快速排序相对于归并会复杂一些些，不过只要大家很好地理解递归过程的排序，我想问题不大。
+
+## 七、堆排序
+
+原理：堆排序是指利用堆这种数据结构，来实现的一种排序，也可以理解为利用堆的概念的快速排序。
+
+>堆排序的，时间复杂度为 `O(nlogn)`
+
+代码实现：
+```javascript
+// 用于第一次构建大顶堆
+function buildMaxHeap(arr, len) {
+    for (var i = Math.floor(len/2); i >= 0; i--) {
+    	heapify(arr, len, i)
+    }
+}
+
+// 堆调整，即调整为大顶堆，堆头为最大元素
+function heapify(arr, len, i) {
+    let left = 2 * i + 1,
+    	right = 2 * i + 2,
+    	largest = i
+    
+    if (left < len && arr[left] > arr[largest]) {
+    	largest = left
+    }
+    if (right < len && arr[right] > arr[largest]) {
+    	largest = right
+    }
+    if (largest != i) {
+    	swap(arr, i, largest)
+    	heapify(arr, len, largest)
+    }
+}
+
+function swap(arr, i, j) {
+    let temp = arr[i]
+    arr[i] = arr[j]
+    arr[j] = temp
+}
+
+function heapSort(arr) {
+    let { length:len } = arr
+    // 构建大顶堆
+    buildMaxHeap(arr, len)
+    
+    for (let i = arr.length-1; i > 0; i--) { 
+        // 交换当前堆的首位
+    	swap(arr, 0, i)
+    	len--
+    	// 调整当前堆为大顶堆
+    	heapify(arr, len, 0)
+    }
+}
+```
+> 这里有个概念**大顶堆**，即堆头大于所有对内的元素。
+
+## 八、计数排序
+
+原理：计数排序是分布式排序，分布式排序使用已组织好的辅助数据结构（称之为桶），然后进行合并，得到排序好的数组，其中 `k` 是临时计数数组的大小。
+
+> 这个计数数组就是利用数组的索引进行排序，将原始数组的元素作为数组的索引，该索引对应的值为该元素出现的次数。其时间复杂度 `0(n+k)`
+
+```javascript
+function countingSort(arr) {
+    if (arr.length < 2) return arr
+    
+    const maxValue = findMaxValue(arr)
+    
+    const counts = Array.of(maxValue + 1)
+    // 迭代原始数组，得到
+    arr.forEach(element => {
+    	if (!counts[element]) {
+    	    counts[element] = 0
+    	}
+    	counts[element]++
+    })
+    
+    let sortedIndex = 0
+    // 迭代计数数组，得到排序后的数组
+    counts.forEach((count, i) => {
+    	// 处理 count 为多次的情况
+    	while (count > 0) {
+    	    arr[sortedIndex++] = i
+    	    count--
+    	}
+    })
+    return arr
+}
+
+function findMaxValue(arr) {
+    let max = arr[0]
+    for (let i = 1; i < arr.length; i++) {
+    	if (arr[i] > max) {
+    	    max = arr[i]
+    	}
+    }
+    return max
+}
+```
+
+## 九、桶排序
+
+原理：桶排序同样也是分布式排序，它将元素分为不同的桶（较小数组），然后使用插入排序，对每个桶进行排序，最后组合每个数组的元素，得到排完序的数组。
+
+>桶排序最优的情况是所有元素平均到各个桶中，即平均情况时间复杂度为 `O(n(logN - logM))`，最优为 `O(n)`，最坏为 `O(nlogN)`，详细的可以移步[百度百科](https://baike.baidu.com/item/%E6%A1%B6%E6%8E%92%E5%BA%8F/4973777?fr=kg_qa)
+
+代码实现：
+```javascript
+function bucketSort(arr, bucketSize) {
+    if (arr.length < 2) return arr
+    
+    const buckets = createBuckets(array, bucketSize)
+    return sortBuckets(buckets)
+}
+
+function createBuckets(arr, bucketSize = 5) {
+    let minValue = arr[0], maxValue = arr[0]
+    // 找到最小值和最大值
+    for (let i = 1; i < arr.length; i++) {
+    	if (arr[i] < minValue) {
+    	    minValue = arr[i]
+    	} else if (array > maxValue) {
+    	    maxValue = array[i]
+    	}
+    }
+    // 计算每个桶中需要分布的元素个数
+    const bucketCount = Math.floor((maxValue - minValue) / bucketSize) + 1
+    const buckets = []
+    // 初始化每个桶
+    for (let i = 0; i < bucketCount; i++) {
+        buckets[i] = []
+    }
+    // 将元素分别装进各个桶
+    for (let i = 0; i < arr.length; i++) {
+        const bucketIndex = Math.floor((maxValue - minValue) / bucketSize)
+        buckets[bucketIndex].push(arr[i])
+    }
+
+    return buckets
+}
+
+function sortBuckets(buckets) {
+    const sortedArray = []
+    for (let i = 0; i < buckets.length; i++) {
+    	if (buckets[i] !== null) {
+            insertionSort(buckets[i])
+            sortedArray.push(...buckets[i])
+    	}
+    }
+    return sortedArray
+}
+```
+
+
+## 十、基数排序
+
+原理：基数排序也是一个分布式排序算法，它是根据数字的有效或基数将整数分布到桶中，基数是基于数组中值的记数制的。
+
+>基数排序的时间复杂度为`O(nlog(r)m)`，其中 `r` 为所采用的基数，`m` 是对应的桶数。
+
+代码实现：
+```javascript
+function radixSort(arr, radixBase = 10) {
+    if (arr.length < 2) {
+    	return arr
+    }
+    
+    const minValue = Math.min(...arr)
+    const maxValue = Math.max(...arr)
+    debugger
+    let significantDigit = 1
+    while ((maxValue - minValue) / significantDigit >= 1) {
+    	arr = countingSortForRadix(arr, radixBase, significantDigit, minValue)
+    	significantDigit *= radixBase
+    }
+    
+    return arr
+}
+function countingSortForRadix(arr, radixBase, significantDigit, minValue) {
+    let bucketsIndex
+    const buckets = []
+    const aux = []
+    // 基于基数分配桶
+    for (let i = 0; i < radixBase; i++) {
+    	buckets[i] = 0
+    }
+    // 处理有效位元素，进行计数
+    for (let i = 0; i < arr.length; i++) {
+    	bucketsIndex = Math.floor(((arr[i] - minValue) / significantDigit) % radixBase)
+    	buckets[bucketsIndex]++
+    }
+    // 计算累计结构得到计数值
+    for (let i = 1; i < radixBase; i++) {
+    	buckets[i] += buckets[i - 1]
+    }
+    // 计算有效位，还原数组
+    for (let i = arr.length-1; i >= 0; i--) {
+    	bucketsIndex = Math.floor(((arr[i] - minValue) / significantDigit) % radixBase)
+    	aux[--buckets[bucketsIndex]] = arr[i]
+    }
+    for (let i = 0; i < arr.length; i++) {
+    	arr[i] = aux[i]
+    }
+    return arr
+}
+```
+
+## 结语
+
+败在算法，羞耻确实，但是也更加坚定了我 20 年深度阅读算法导论的想法。并且，虽说在文章开头说了失败能让自己更好地成长，但是一直失败肯定是行不通的。所以，如果准备面试的同学，在刷算法的同时别漏了排序这玩意，毕竟我就是前车之鉴。当然，水平高的应该不在乎这些哈哈。
+
+>在这次面试过程中还有几点其他的思考，等之后找到工作再给大家分享**普通二本生的应届校招之旅**。
+
+
+**参考文档**
+
+《学习JavaScript数据结构与算法》
+
+[十大经典算法 | 菜鸟教程](https://www.runoob.com/w3cnote/ten-sorting-algorithm.html)
